k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
spec:
  selector:
    app: todo-api
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
